--- a/stall/package.json
+++ b/stall/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.15.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "axios": "^1.6.8",
+    "install": "^0.13.0",
+    "npm": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
