--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "cd ./client && npm install && npm run build && cd ../stall && npm install && npm run build && cd ../server && npm install && npm start"
+    "build": "cd ./client && npm install && npm run build && cd ../stall && npm install && npm run build && cd ../server && npm install && tsc"
   },
   "packageManager": "npm@9.6.7"
 }
