--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "cd ../client && npm run build &&  mkdir -p ../server/public && move ./dist/* ../server/public && cd ../server && node index.js"
+    "start": "cd ../client && npm run build && rm -rf ../server/public && mkdir -p ../server/public && mv ./dist/* ../server/public && cd ../server && node index.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
