--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.4",
     "react-router-dom": "^6.22.3",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.7.5"
